# nanocode

./: .gitignore  AGENTS.md  Cargo.toml  Cargo_test.toml  FIX_SUMMARY.md  FREE_MODEL_VERIFICATION.md  README.md  install.sh  nanocode.llama33_15.json  test_genai.rs  test_simple.rs
.github/workflows/: ci.yml  release.yml  update-tap.yml
.sisyphus/: ralph-loop.local.md
bench/: run.sh
bench/swe_bench/: mistakes.md  run_full.sh  run_inference.py
bench/tasks/: run.sh
bench/tasks/01_count_files/: task.txt  verify.py
bench/tasks/01_fizzbuzz/: task.txt
bench/tasks/02_bugfix/: task.txt
bench/tasks/02_hello_world/: task.txt  verify.py
bench/tasks/03_fizzbuzz/: verify.py
bench/tasks/03_refactor/: messy.py
bench/tasks/04_bugfix/: buggy.py  verify.py
bench/tasks/05_file_ops/: task.txt  verify.py
bench/tasks/05_refactor/: task.txt  verify.py
bench/tasks/06_new_feature/: task.txt  verify.py
bench/tasks/08_sort_numbers/: task.txt  verify.py
bench/tasks/09_word_count/: input.txt  task.txt  verify.py
bench/tasks/10_rename_file/: task.txt  verify.py
src/: .llm.rs.swp  llm.rs  main.rs  tools.rs
swe_bench/: run_inference.py
