[package]
name = "freecode"
version = "0.3.0"
edition = "2021"
description = "A minimal coding agent — patch-first, embeddable, fast. Auto-selects the best free model via OpenRouter."

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
genai = "0.1"
atty = "0.2"
futures = "0.3.32"
clap = { version = "4", features = ["derive"] }
